--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cron": "^2.2.0",
+        "node-cron": "^3.0.2",
         "node-telegram-bot-api": "^0.61.0"
     }
 }
